[package]
edition = "2024"
name = "email_scheduled_handler"
publish = false
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws_lambda_events = { workspace = true, features = ["eventbridge"] }
chrono = { workspace = true }
lambda_runtime = { workspace = true }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env = { path = "../macro_env" }
models_email = { path = "../models_email" }
sqlx = { workspace = true }
sqs_client = { path = "../sqs_client" }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["openssl"]
